@@ -1,3 +1,7 @@
+2014-03-19  Per Bothner  <per@bothner.com>
+
+	* RunProcess.java (handleMarks): Merge into tokenize method.
+
 2014-03-18  Per Bothner  <per@bothner.com>
 
 	* GetModuleClass.java (classResourcePath): Moved from URLPath.java.
